# std

./: .gitignore  README.md  learning.ctb
cpp/: .gitignore  .ycm_extra_conf.py  Makefile
cpp/allocate/: Makefile  allocator.cpp  allocator.h  main.cpp  meng
cpp/boost/: .gitignore  Makefile  chat_server.cpp  console_and_file.cpp  ring_buffer.cpp
cpp/cpp_oo/: concreate.cpp  p2member.cpp  temp.cpp  vbase.cpp  virtual.cpp  virtualbase.cpp
cpp/daily/: .gitignore  CMakeLists.txt
cpp/daily/include/util/: const.h  stream.h
cpp/daily/src/: .ycm_extra_conf.py  config.h
cpp/daily/src/his/: header.h  main.cpp  message.h  worker.cpp  worker.h
cpp/daily/src/net/: client.cpp  client.h
cpp/design/: Makefile  factor.cpp  factory  factory.cpp  typelist  typelist.cpp
cpp/meta/: add_const_ref.cpp  add_const_ref.h  binary.cpp  binary.h  is_array.h  is_base_and_derived.cpp  is_base_and_derived.h  is_function.cpp  is_function.h  is_reference.cpp  is_reference.h  is_same.cpp  is_void.cpp  is_void.h  polymorphic_cast.cpp  polymorphic_cast.h  replace_type.cpp  replace_type.h
cpp/misc/: .gitignore  Select  all_of.cpp  arraysize.cpp  bind.cpp  bits.cpp  brace_init.cpp  constexpr.cpp  constructor.cpp  declare.cpp  default_args.cpp  empty_vec.cpp  now  (+62 more)
cprog/: .gitignore  .ycm_extra_conf.py  arch.c  clock_gettime.c  compress.c  decompress.c  epoll_et.c  false_sharing.c  pointer.c  return_to_libc.c  self.c  setproctitle  setproctitle.c  snprintf.c  strsep  strsep.c  thread_signal  thread_signal.c
gnumake/: .gitignore
go/: .gitignore
python/boost/: CMakeLists.txt  hello.cpp
(+445 files in other folders)
